--- a/EarthBlue/Imagery/EPICImageSliderViewController.storyboard
+++ b/EarthBlue/Imagery/EPICImageSliderViewController.storyboard
@@ -16,10 +16,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="okr-Xc-k2L">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="always" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="okr-Xc-k2L">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="Zqp-Rb-3NI">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="nR9-Fr-Jrn">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -27,30 +27,6 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nrt-yA-OKr">
-                                <rect key="frame" x="0.0" y="838" width="414" height="58"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="66e-L8-DgJ">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="58"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <subviews>
-                                        <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="PpF-5W-Eoa">
-                                            <rect key="frame" x="129" y="16" width="156" height="26"/>
-                                            <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <color key="currentPageIndicatorTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </pageControl>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="PpF-5W-Eoa" firstAttribute="top" secondItem="66e-L8-DgJ" secondAttribute="top" constant="16" id="Use-Oo-MqZ"/>
-                                        <constraint firstAttribute="bottom" secondItem="PpF-5W-Eoa" secondAttribute="bottom" constant="16" id="ne3-eH-PvR"/>
-                                        <constraint firstItem="PpF-5W-Eoa" firstAttribute="centerY" secondItem="66e-L8-DgJ" secondAttribute="centerY" id="pxZ-aT-o8s"/>
-                                        <constraint firstItem="PpF-5W-Eoa" firstAttribute="centerX" secondItem="66e-L8-DgJ" secondAttribute="centerX" id="qeZ-kZ-6qV"/>
-                                    </constraints>
-                                </view>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="128" id="8z7-mF-kD8"/>
-                                </constraints>
-                                <blurEffect style="systemMaterial"/>
-                            </visualEffectView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="71v-Zu-fiY">
                                 <rect key="frame" x="338" y="60" width="60" height="60"/>
                                 <constraints>
@@ -68,20 +44,16 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Nrt-yA-OKr" secondAttribute="trailing" id="1ca-0Z-tPm"/>
                             <constraint firstItem="okr-Xc-k2L" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="56u-rI-hjW"/>
-                            <constraint firstAttribute="bottom" secondItem="okr-Xc-k2L" secondAttribute="bottom" id="Hak-tA-Raw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="okr-Xc-k2L" secondAttribute="bottom" id="Hak-tA-Raw"/>
                             <constraint firstItem="okr-Xc-k2L" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ivl-j3-yrC"/>
                             <constraint firstItem="71v-Zu-fiY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="TSe-Ps-uRq"/>
-                            <constraint firstItem="Nrt-yA-OKr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Wml-Va-OjM"/>
-                            <constraint firstAttribute="bottom" secondItem="Nrt-yA-OKr" secondAttribute="bottom" id="eax-FJ-XJR"/>
                             <constraint firstItem="okr-Xc-k2L" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kjg-e2-VME"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="71v-Zu-fiY" secondAttribute="trailing" constant="16" id="wj9-M0-l8q"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="okr-Xc-k2L" id="4gu-NC-CdG"/>
-                        <outlet property="pageControlView" destination="PpF-5W-Eoa" id="dLB-Lc-4Zk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
