--- a/EarthBlue/shared/UI/ImagePresentationViewController.xib
+++ b/EarthBlue/shared/UI/ImagePresentationViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -19,14 +19,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" translatesAutoresizingMaskIntoConstraints="NO" id="XAJ-RF-Fjc">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EPICImageThumb" translatesAutoresizingMaskIntoConstraints="NO" id="I9f-do-QY9">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         </imageView>
                     </subviews>
                     <constraints>
@@ -57,7 +57,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DkS-qz-tTA">
-                    <rect key="frame" x="348" y="60" width="50" height="50"/>
+                    <rect key="frame" x="324" y="60" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="Chj-3z-5G8"/>
                         <constraint firstAttribute="width" constant="50" id="LOk-ZN-1zA"/>
@@ -76,8 +76,8 @@
                 <constraint firstItem="DkS-qz-tTA" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="JMG-PE-X48"/>
                 <constraint firstItem="ck9-Al-jmQ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="Kn1-BV-n0N"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="DkS-qz-tTA" secondAttribute="trailing" constant="16" id="ZQB-Z6-zYn"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="XAJ-RF-Fjc" secondAttribute="trailing" id="aKW-id-dxB"/>
-                <constraint firstItem="XAJ-RF-Fjc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="gxP-P3-Kzs"/>
+                <constraint firstAttribute="trailing" secondItem="XAJ-RF-Fjc" secondAttribute="trailing" id="aKW-id-dxB"/>
+                <constraint firstItem="XAJ-RF-Fjc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="gxP-P3-Kzs"/>
                 <constraint firstAttribute="bottom" secondItem="XAJ-RF-Fjc" secondAttribute="bottom" id="sWf-8T-T6B"/>
             </constraints>
             <point key="canvasLocation" x="137.68115942028987" y="113.83928571428571"/>
